--- a/frontEnd/app/src/main/res/drawable/check_icon.xml
+++ b/frontEnd/app/src/main/res/drawable/check_icon.xml
@@ -1,9 +1,122 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="14dp"
-    android:height="14dp"
-    android:viewportWidth="14"
-    android:viewportHeight="14">
+    android:width="25dp"
+    android:height="24dp"
+    android:viewportWidth="25"
+    android:viewportHeight="24">
     <path
-        android:fillColor="#FF4169E1"
-        android:pathData="M10.3 3.85L6.03 8.13 3.7 5.81 2.77 6.72l3.25 3.25 5.2-5.2-0.91-0.92ZM7.33 0.22c-3.59 0-6.5 2.92-6.5 6.5 0 3.6 2.91 6.5 6.5 6.5s6.5-2.9 6.5-6.5c0-3.58-2.91-6.5-6.5-6.5Zm0 11.7c-2.87 0-5.2-2.32-5.2-5.2 0-2.87 2.33-5.2 5.2-5.2s5.2 2.33 5.2 5.2c0 2.88-2.33 5.2-5.2 5.2Z"/>
+        android:fillColor="#FF2B5896"
+        android:pathData="M12 0A12 12 0 1 0 12 24 12 12 0 1 0 12 0z"/>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M12 2l0.45 1.38h1.45l-1.17 0.86 0.45 1.38L12 4.76l-1.18 0.86 0.45-1.38-1.17-0.86h1.45L12 2Z"/>
+    <path
+        android:fillColor="#FFD9D9D9"
+        android:pathData="M5.91 13.26c0.72 4.07 6.98 6.38 6.59 6.45-1.3 0.23-6.26-2.3-6.98-6.39C4.8 9.25 6.8 6 8.1 5.76c0.4-0.07-2.9 3.42-2.19 7.5Z"/>
+    <group>
+        <clip-path
+            android:pathData="M5.91 13.26c.72 4.07 6.98 6.38 6.59 6.45-1.3.23-6.26-2.3-6.98-6.39C4.8 9.25 6.8 6 8.1 5.76c.4-.07-2.9 3.42-2.19 7.5Z"/>
+        <path
+            android:fillColor="#FFFCD46A"
+            android:pathData="M4.93 13.43c0.43 2.47 2.5 4.27 4.13 5.38 0.85 0.58 1.65 1.02 2.2 1.32l0.6 0.32c0.08 0.04 0.03 0.03-0.03-0.03l-0.13-0.14c-0.04-0.06-0.17-0.25-0.18-0.53-0.02-0.38 0.16-0.68 0.4-0.85 0.18-0.13 0.35-0.16 0.4-0.17l0.35 1.97c0.07-0.02 0.25-0.05 0.43-0.19 0.24-0.17 0.43-0.48 0.41-0.86-0.01-0.3-0.14-0.49-0.2-0.55-0.05-0.09-0.12-0.15-0.15-0.18-0.11-0.1-0.25-0.17-0.3-0.2l-0.65-0.36c-0.54-0.28-1.27-0.68-2.02-1.2-1.58-1.07-3-2.47-3.3-4.08l-1.96 0.35Zm7.4 5.3l-0.27-0.04c-0.2-0.04-0.44-0.11-0.72-0.23-0.58-0.24-1.27-0.62-1.95-1.13C8 16.3 6.8 14.84 6.5 13.15L4.54 13.5c0.42 2.39 2.05 4.24 3.65 5.43 0.81 0.61 1.65 1.08 2.39 1.38 0.37 0.15 0.73 0.27 1.06 0.34 0.32 0.06 0.69 0.1 1.03 0.05l-0.35-1.97ZM6.5 13.15C6.18 11.31 6.47 9.67 6.97 8.5c0.25-0.6 0.55-1.05 0.82-1.36 0.14-0.15 0.26-0.25 0.35-0.31 0.1-0.07 0.14-0.07 0.13-0.07L7.93 4.78C7.28 4.89 6.73 5.33 6.3 5.8 5.86 6.3 5.45 6.95 5.13 7.71c-0.64 1.52-0.99 3.55-0.6 5.79l1.98-0.35Zm1.76-6.4C8.2 6.76 7.81 6.82 7.47 6.52 7.1 6.2 7.13 5.78 7.14 5.69c0.01-0.13 0.05-0.22 0.05-0.23l0.02-0.03-0.23 0.36C6.74 6.18 6.36 6.77 6 7.51c-0.73 1.45-1.47 3.57-1.06 5.92l1.97-0.35c-0.3-1.73 0.24-3.4 0.88-4.68 0.32-0.64 0.65-1.16 0.89-1.53 0.1-0.17 0.23-0.36 0.3-0.5L9.05 6.2C9.07 6.16 9.1 6.04 9.13 5.89c0.01-0.12 0.03-0.55-0.34-0.88-0.36-0.3-0.76-0.25-0.86-0.23l0.34 1.97Z"/>
+    </group>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M11.9 16.14Zm0.14 0.24l0.12 0.29c0.16 0.49 0.21 1 0.1 1.34-0.16 0.48-0.47 0.92-0.75 1.15l-0.12 0.1c0-0.43 0.1-0.79 0.23-1.22l0.06-0.19c0.13-0.4 0.29-0.87 0.36-1.47Zm-0.82 2.93Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M8.2 19.32h0.01Zm0.23 0.2c0.06 0.06 0.14 0.1 0.24 0.16 0.44 0.26 0.92 0.4 1.25 0.34 0.47-0.08 0.95-0.31 1.22-0.56l0.1-0.1c-0.38-0.07-0.73-0.04-1.17 0.03l-0.15 0.03c-0.4 0.06-0.9 0.14-1.5 0.1Zm2.9-0.32Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M9.36 14.42Zm0.1 0.26c0.03 0.08 0.05 0.18 0.07 0.3 0.08 0.51 0.05 1.04-0.12 1.34-0.24 0.44-0.62 0.82-0.93 1l-0.14 0.06c0.07-0.4 0.23-0.74 0.44-1.15l0.08-0.16c0.2-0.37 0.43-0.82 0.6-1.4Zm-1.3 2.73Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M5.19 16.88Zm0.18 0.24l0.21 0.2c0.4 0.33 0.85 0.55 1.18 0.56 0.48 0 1-0.14 1.3-0.33 0.05-0.03 0.09-0.06 0.12-0.1-0.37-0.12-0.72-0.15-1.16-0.16H6.86c-0.4-0.01-0.9-0.02-1.49-0.17Zm2.92 0.2Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M8.22 12.43v0.01Zm-0.04 0.28l-0.09 0.3c-0.17 0.47-0.46 0.9-0.75 1.08-0.42 0.26-0.93 0.39-1.3 0.38L5.9 14.45c0.26-0.31 0.56-0.52 0.93-0.76L7 13.59c0.34-0.22 0.76-0.48 1.18-0.88ZM5.73 14.4Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M3.39 12.39Zm0.04 0.29l0.09 0.28c0.18 0.49 0.47 0.92 0.76 1.1 0.42 0.26 0.93 0.4 1.3 0.39l0.14-0.01c-0.26-0.32-0.56-0.53-0.94-0.77l-0.15-0.1c-0.35-0.21-0.77-0.48-1.2-0.89Zm2.46 1.7Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M9.4 9.55ZM9.28 9.79c-0.04 0.08-0.1 0.16-0.18 0.24-0.32 0.39-0.73 0.7-1.07 0.75-0.48 0.1-1 0.03-1.35-0.1L6.56 10.6c0.35-0.2 0.7-0.3 1.13-0.38l0.2-0.05c0.4-0.07 0.87-0.17 1.4-0.39Zm-2.87 0.7Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M9.52 3.93ZM9.44 3.9C9.34 3.88 9.2 3.88 9.02 3.91 8.63 4 8.42 4.14 8.33 4.3c-0.2 0.34-0.3 0.9-0.27 1.36l0.02 0.22c0.54-0.5 0.85-1.05 1.25-1.76l0.11-0.2ZM8.17 6.12Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M4.54 7.39ZM4.48 7.65v0.3c0 0.52 0.13 1.03 0.35 1.3 0.32 0.4 0.76 0.71 1.1 0.84l0.14 0.04C5.92 9.73 5.7 9.42 5.44 9.06L5.31 8.88C5.05 8.56 4.75 8.17 4.48 7.65Zm1.78 2.48Z"/>
+    <path
+        android:fillColor="#FFD9D9D9"
+        android:pathData="M18.34 13.26c-0.72 4.07-6.97 6.38-6.58 6.45 1.3 0.23 6.26-2.3 6.98-6.39 0.72-4.07-1.28-7.33-2.58-7.56-0.4-0.07 2.9 3.42 2.18 7.5Z"/>
+    <group>
+        <clip-path
+            android:pathData="M18.34 13.26c-.72 4.07-6.97 6.38-6.58 6.45 1.3.23 6.26-2.3 6.98-6.39.72-4.07-1.28-7.33-2.58-7.56-.4-.07 2.9 3.42 2.18 7.5Z"/>
+        <path
+            android:fillColor="#FFFCD46A"
+            android:pathData="M19.33 13.43c-0.44 2.47-2.5 4.27-4.13 5.38-0.85 0.58-1.65 1.02-2.2 1.32l-0.6 0.32c-0.08 0.04-0.04 0.03 0.03-0.03l0.13-0.14c0.04-0.06 0.17-0.25 0.18-0.53 0.02-0.38-0.17-0.68-0.4-0.85-0.18-0.13-0.35-0.16-0.4-0.17l-0.35 1.97c-0.07-0.02-0.25-0.05-0.44-0.19-0.23-0.17-0.42-0.48-0.4-0.86 0-0.3 0.14-0.49 0.2-0.55 0.05-0.09 0.11-0.15 0.15-0.18 0.11-0.1 0.25-0.17 0.3-0.2l0.65-0.36c0.53-0.28 1.26-0.68 2.02-1.2 1.58-1.07 3-2.47 3.29-4.08l1.97 0.35Zm-7.4 5.3l0.27-0.04c0.19-0.04 0.43-0.11 0.72-0.23 0.58-0.24 1.27-0.62 1.95-1.13 1.38-1.03 2.58-2.49 2.88-4.18l1.97 0.35c-0.42 2.39-2.05 4.24-3.65 5.43-0.81 0.61-1.65 1.08-2.4 1.38-0.36 0.15-0.72 0.27-1.06 0.34-0.31 0.06-0.68 0.1-1.02 0.05l0.34-1.97Zm5.82-5.58c0.33-1.84 0.04-3.48-0.46-4.66-0.26-0.6-0.55-1.05-0.82-1.36-0.14-0.15-0.26-0.25-0.35-0.31-0.1-0.07-0.15-0.07-0.14-0.07l0.35-1.97c0.65 0.11 1.2 0.55 1.63 1.02 0.44 0.5 0.85 1.15 1.17 1.91 0.64 1.52 0.99 3.55 0.6 5.79l-1.98-0.35Zm-1.77-6.4c0.08 0.01 0.47 0.07 0.81-0.23 0.36-0.32 0.34-0.74 0.33-0.83-0.01-0.13-0.05-0.22-0.06-0.23V5.43l0.22 0.36c0.24 0.39 0.62 0.98 0.99 1.72 0.73 1.45 1.47 3.57 1.06 5.92l-1.97-0.35c0.3-1.73-0.24-3.4-0.88-4.68-0.32-0.64-0.65-1.16-0.89-1.53-0.1-0.17-0.23-0.36-0.3-0.5L15.2 6.2c-0.02-0.05-0.06-0.17-0.08-0.32-0.01-0.12-0.03-0.55 0.34-0.88 0.36-0.3 0.76-0.25 0.86-0.23l-0.35 1.97Z"/>
+    </group>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M12.36 16.14Zm-0.14 0.24l-0.12 0.29c-0.16 0.49-0.22 1-0.1 1.34 0.15 0.48 0.47 0.92 0.75 1.15l0.12 0.1c0-0.43-0.1-0.79-0.24-1.22l-0.06-0.19c-0.13-0.4-0.28-0.87-0.35-1.47Zm0.81 2.93Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M16.05 19.32Zm-0.22 0.2c-0.07 0.06-0.15 0.1-0.24 0.16-0.44 0.26-0.92 0.4-1.25 0.34-0.48-0.08-0.95-0.31-1.22-0.56l-0.1-0.1c0.38-0.07 0.73-0.04 1.17 0.03l0.15 0.03c0.4 0.06 0.9 0.14 1.49 0.1Zm-2.9-0.32Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M14.9 14.42Zm-0.1 0.26c-0.03 0.08-0.06 0.18-0.07 0.3-0.09 0.51-0.05 1.04 0.12 1.34 0.23 0.44 0.62 0.82 0.93 1l0.14 0.06c-0.08-0.4-0.23-0.74-0.44-1.15l-0.09-0.16c-0.2-0.37-0.43-0.82-0.6-1.4Zm1.3 2.73h-0.01Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M19.07 16.88Zm-0.18 0.24l-0.21 0.2c-0.4 0.33-0.85 0.55-1.18 0.56-0.48 0-1-0.14-1.3-0.33-0.05-0.03-0.1-0.06-0.12-0.1 0.36-0.12 0.72-0.15 1.16-0.16h0.15c0.41-0.01 0.91-0.02 1.5-0.17Zm-2.92 0.2Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M16.04 12.43v0.01Zm0.04 0.28l0.08 0.3c0.18 0.47 0.46 0.9 0.76 1.08 0.41 0.26 0.93 0.39 1.3 0.38l0.14-0.02c-0.26-0.31-0.56-0.52-0.93-0.76l-0.17-0.1c-0.35-0.22-0.76-0.48-1.18-0.88Zm2.45 1.68Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M20.87 12.39Zm-0.04 0.29l-0.09 0.28c-0.18 0.49-0.47 0.92-0.76 1.1-0.42 0.26-0.94 0.4-1.3 0.39l-0.14-0.01c0.26-0.32 0.56-0.53 0.93-0.77l0.16-0.1c0.35-0.21 0.77-0.48 1.2-0.89Zm-2.46 1.7Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M14.85 9.55Zm0.13 0.24c0.04 0.08 0.1 0.16 0.17 0.24 0.33 0.39 0.74 0.7 1.07 0.75 0.48 0.1 1.01 0.03 1.35-0.1l0.13-0.07c-0.35-0.2-0.7-0.3-1.13-0.38l-0.2-0.05c-0.4-0.07-0.87-0.17-1.4-0.39Zm2.86 0.7Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M14.74 3.93Zm0.07-0.03c0.1-0.02 0.25-0.02 0.43 0.01 0.39 0.08 0.6 0.23 0.69 0.38 0.2 0.34 0.3 0.9 0.27 1.36l-0.02 0.22c-0.54-0.5-0.85-1.05-1.25-1.76l-0.12-0.2Zm1.28 2.22Z"/>
+    <path
+        android:fillColor="#FFFCD46A"
+        android:strokeColor="#FFFCD46A"
+        android:strokeWidth="1"
+        android:pathData="M19.72 7.39Zm0.06 0.26v0.3c0 0.52-0.14 1.03-0.36 1.3-0.31 0.4-0.75 0.71-1.1 0.84l-0.13 0.04c0.15-0.4 0.35-0.71 0.63-1.07l0.13-0.18c0.26-0.32 0.56-0.71 0.83-1.23ZM18 10.13Z"/>
 </vector>
