--- a/frontEnd/app/src/main/res/layout/activity_dibs.xml
+++ b/frontEnd/app/src/main/res/layout/activity_dibs.xml
@@ -21,17 +21,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:src="@drawable/backspace_icon" />
+            android:layout_marginStart="10dp"
+            android:src="@drawable/mini_logo" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginStart="10dp"
             android:src="@drawable/hart_home_icon" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="찜목록"
+
             android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_gravity="center"
