--- a/frontEnd/app/src/main/res/layout/activity_food_main.xml
+++ b/frontEnd/app/src/main/res/layout/activity_food_main.xml
@@ -181,6 +181,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
             <TextView
+                android:id="@+id/main_btn_qna"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="10sp"
