--- a/frontEnd/app/src/main/res/layout/activity_dibs.xml
+++ b/frontEnd/app/src/main/res/layout/activity_dibs.xml
@@ -68,6 +68,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dibRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
