--- a/frontEnd/app/src/main/res/layout/dibs_item.xml
+++ b/frontEnd/app/src/main/res/layout/dibs_item.xml
@@ -10,6 +10,7 @@
         android:padding="5dp"
         android:background="@drawable/dibs_item_base">
         <TextView
+            android:id="@+id/upsoName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -27,19 +28,22 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="25dp">
             <TextView
+                android:id="@+id/siteAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="서울 특별시 oo구 oo동"/>
             <TextView
+                android:id="@+id/geEnYn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="음식 종류"/>
+                android:text="모범식당여부"/>
         </LinearLayout>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <ImageView
+            android:id="@+id/dibs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/hart_home_icon"
